improve cluster, fix misaligned sidebar on customized profiles, preliminary "profile edit" toolbar css

--- a/trinium/_content_box.scss
+++ b/trinium/_content_box.scss
@@ -224,8 +224,16 @@
                 display: flex;
             }
 
-            .content-description {
+            .content-author, .content-info, .content-description {
                 font-size: 0.8em;
+            }
+
+            .content-description {
+                display: -webkit-box;
+                line-clamp: 4;
+                -webkit-line-clamp: 4;
+                -webkit-box-orient: vertical; // this is deprecated, but I Dont Care.
+                overflow: hidden;
             }
         }
 
