--- a/trinium/_grid_system.scss
+++ b/trinium/_grid_system.scss
@@ -61,13 +61,32 @@ $gap: 1em;
 
     >div {
         background: $content-box-background-color;
-        padding: $content-box-padding;
+        //padding: $content-box-padding;
+    }
+
+    .section {
+        margin: 0;
+
+        .section-header {
+            padding: $content-box-padding $content-box-padding 0 $content-box-padding;
+            margin: 0;
+        }
+
+        &:not(:last-child) {
+            border-bottom: 1px solid $content-box-border-color;
+        }
     }
 
     .content-box {
         background: none;
         border: none;
         padding: 0;
+
+        // kind of ugly ?
+        .content-entry, .content-entry:first-child, .content-entry:last-child, .comment {
+            padding: $content-box-padding;
+            margin: 0;
+        }
     }
 }
 
