--- a/trinium/_variables.scss
+++ b/trinium/_variables.scss
@@ -19,7 +19,7 @@ $content-box-border-color: #E0E0E0;
 
 @if $color-scheme =="dark" {
     $content-box-background-color: #0a0a0a;
-    $content-box-border-color: #252525;
+    $content-box-border-color: #2a2a2a;
 }
 
 $content-box-padding: 1em;
